Changed the design, added the header

--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -1,3 +1,14 @@
 {
-    "placeholder":"Search..."
+    "placeholder":"Search...",
+    "change-language":"Language to {{changeTo}}",
+    "account":"Account",
+    "log-in":"Log in",
+    "sign-in":"Sign in",
+    "categories":{
+        "mobile":"Mobiles",
+        "code":"Code",
+        "tech":"Technologies",
+        "os":"OS",
+        "C&P":"Computers & Portables"
+    }
 }
