--- a/public/locales/es/header.json
+++ b/public/locales/es/header.json
@@ -1,9 +1,8 @@
 {
     "placeholder":"Buscar...",
-    "change-language":"Idioma a {{changeTo}}",
     "account":"Cuenta",
     "log-in":"Iniciar sesión",
-    "sign-in":"Registrate",
+    "sign-in":"Registrarse",
     "categories":{
         "mobile":"Móviles",
         "code":"Código",
