--- a/public/locales/en/signIn_logIn.json
+++ b/public/locales/en/signIn_logIn.json
@@ -1,13 +1,25 @@
 {
     "email":"Email",
     "password":"Password",
+    "try":"OR TRY WITH: ",
     "logIn":{
         "login":"Log in",
         "forgotPassword":"Did you forget your password?",
-        "account":"Do you need an account?"
+        "account":"Do you need an account?",
+        "remember":"Remeber me?"
     },
     "signIn":{
         "signin":"Sign in",
         "areUser": "Are you a user?"
+    },
+    "errors":{
+        "email":{
+            "empty":"Email is required!",
+            "valid":"This isn't a valid email format!"
+        },
+        "password":{
+            "empty":"Password is required!",
+            "valid":"Password must contain al least 1 number, 1 uppercase and 1 spacial character and passwords cannot be more that 16 chacacters."
+        }
     }
 }
