--- a/public/locales/en/signIn_logIn.json
+++ b/public/locales/en/signIn_logIn.json
@@ -15,11 +15,14 @@
     "errors":{
         "email":{
             "empty":"Email is required!",
-            "valid":"This isn't a valid email format!"
+            "valid":"This isn't a valid email format!",
+            "exists": "This user already exists!",
+            "doesn't-exists": "this user doesn't exists!"
         },
         "password":{
             "empty":"Password is required!",
             "valid":"Password must contain al least 1 number, 1 uppercase and 1 spacial character and passwords cannot be more that 16 chacacters."
-        }
+        },
+        "internet":"no network connection"
     }
 }
