--- a/public/locales/es/signIn_logIn.json
+++ b/public/locales/es/signIn_logIn.json
@@ -28,8 +28,8 @@
     "verification":{
         "titlePage": "Verificación",
         "title":"Verifica la dirección de tu correo electrónico.",
-        "message":"Se ha enviado un correo electrónico de verificación a ",
-        "suggestion":"Sigue las intrucciones en el correo electrónico para verificar la cuenta.",
+        "message":"Se ha enviado un correo electrónico de verificación a: ",
+        "suggestion":"Sigue las instrucciones en el correo electrónico para verificar la cuenta.",
         "resend":"Reenviar correo"
     }
 }
