--- a/public/locales/en/signIn_logIn.json
+++ b/public/locales/en/signIn_logIn.json
@@ -21,9 +21,12 @@
         },
         "password":{
             "empty":"Password is required!",
-            "valid":"Password must contain al least 1 number, 1 uppercase and 1 spacial character and passwords cannot be more that 16 chacacters."
+            "valid":"Password must contain al least 1 number, 1 uppercase and 1 spacial character and passwords cannot be more that 16 chacacters.",
+            "wrong": "Password is wrong!",
+            "manyRequests": "Access to this account has been temporarily disabled due to many failed login attempts. You can immediately restore it by resetting your password or you can try again later."
         },
-        "internet":"no network connection"
+        "internet":"No network connection",
+        "emailVerification": "You've not verified your email address yet."
     },
     "verification":{
         "titlePage": "Verification",
