--- a/public/locales/en/signIn_logIn.json
+++ b/public/locales/en/signIn_logIn.json
@@ -41,6 +41,7 @@
         "before":"Before you start enjoying to your account, you need to complete the following fields:",
         "userName": "Username",
         "chooseImage": "Choose an image for your profile or upload an image from your device.",
+        "upload":"Upload image",
         "save": "Save"
     }
 }
