created Sign-out feauture

--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -11,5 +11,6 @@
         "os":"OS",
         "C&P":"Computers & Portables"
     },
-    "postNew":"Post"
+    "postNew":"Post",
+    "profile": "Profile"
 }
