--- a/public/locales/es/header.json
+++ b/public/locales/es/header.json
@@ -11,5 +11,6 @@
         "os":"SO",
         "C&P":"Computadoras y Portátiles"
     },
-    "postNew":"Postea"
+    "postNew":"Postea",
+    "profile": "Perfil"
 }
