added username verification

--- a/public/locales/en/signIn_logIn.json
+++ b/public/locales/en/signIn_logIn.json
@@ -25,7 +25,8 @@
             "manyRequests": "Access to this account has been temporarily disabled due to many failed login attempts. You can immediately restore it by resetting your password or you can try again later."
         },
         "internet":"No network connection",
-        "emailVerification": "You've not verified your email address yet."
+        "emailVerification": "You've not verified your email address yet.",
+        "userName":"Username already exists! please change it"
     },
     "verification":{
         "titlePage": "Verification",
