--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,5 +7,12 @@
         "os":"OS",
         "C&P":"Computers & Portables"
     },
-    "hour":"{{time}} hours ago"
+    "hour":"{{time}} hours ago",
+    "message":{
+        "mobile":"Here is where you can read all about mobile news and with the most popular smartphones enterprises such as: Aplee ,Xiaomi, Samsung, Blue, LG, Nokia etc...",
+        "code":"Here is a very beautiful section because you can found interesting thing about code and their technologies, you know things like javascript, typescript, php, node.js, react, java etc... ",
+        "tech":"Here is a explosive section where you'll find technology news and you never will be in the past.",
+        "os":"Here is a simple section where there are all about opereting systems.",
+        "C&P":"Here is where all that people that love computers and portables can be and that's because abviously here is all about that :)"
+    }
 }
