--- a/public/locales/es/newPost.json
+++ b/public/locales/es/newPost.json
@@ -8,5 +8,7 @@
     },
     "published":"Publicado",
     "hour":"Hace {{time}} horas",
-    "by":"por"
+    "by":"por",
+    "skills":"Habilidades:",
+    "thisUser":"Este usuario es:"
 }
