--- a/public/locales/es/newPost.json
+++ b/public/locales/es/newPost.json
@@ -14,11 +14,10 @@
     "comments":"Comentarios",
     "createComment":{
         "noAccount":{
-            "you":"No estás en tu cuenta entonces si quieres crear un comentario aparecerás como un",
-            "anonymous":"Anonimo",
-            "or":"o puedes",
-            "log-in":"Iniciar sesión",
-            "sign-in":"Registrarse"
+            "you":"No estás en tu cuenta si tu quieres comentar",
+            "log-in":"Inicia sesión",
+            "or":"o",
+            "sign-in":"Registrate"
         },
         "placeholder":"Escribe tu propia opinión.",
         "help":{
