--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -12,5 +12,6 @@
         "C&P":"Computers & Portables"
     },
     "postNew":"Post",
-    "profile": "Profile"
+    "profile": "Profile",
+    "chooseCategory": "Please choose a category."
 }
