--- a/public/locales/es/header.json
+++ b/public/locales/es/header.json
@@ -12,5 +12,6 @@
         "C&P":"Computadoras y Portátiles"
     },
     "postNew":"Postea",
-    "profile": "Perfil"
+    "profile": "Perfil",
+    "chooseCategory": "Por favor escoge una categoría."
 }
