added author if the new's author creates a comment

--- a/public/locales/en/newPost.json
+++ b/public/locales/en/newPost.json
@@ -12,6 +12,7 @@
     "skills":"Skills:",
     "thisUser":"This user is:",
     "comments":"Comments",
+    "author":"Author",
     "createComment":{
         "noAccount":{
             "you":"You aren't in your account if you want to comment",
