--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -13,5 +13,12 @@
     },
     "postNew":"Post",
     "profile": "Profile",
-    "chooseCategory": "Please choose a category."
+    "chooseCategory": "Please choose a category.",
+    "notifications":{
+        "to":"",
+        "new":"commented in your new.",
+        "replied":"replied your comment.",
+        "liked":"liked your comment.",
+        "empty":"You don't have notifications."
+    }
 }
