Fixed some css in user page and added user's news in the page

--- a/public/locales/en/user.json
+++ b/public/locales/en/user.json
@@ -16,5 +16,6 @@
     "editProfile":"Edit Profile",
     "cancel":"Cancel",
     "noNews":"You don't have any new yet.",
-    "changeImage":"Change your profile picture"
+    "changeImage":"Change your profile picture",
+    "editNew":"Edit new."
 }
