Preparing creating new to edit new

--- a/public/locales/en/user.json
+++ b/public/locales/en/user.json
@@ -17,5 +17,6 @@
     "cancel":"Cancel",
     "noNews":"You don't have any new yet.",
     "changeImage":"Change your profile picture",
-    "editNew":"Edit new."
+    "editNew":"Edit new.",
+    "userNews":"Here you can find all the news that you have created and you can edit them too."
 }
