Finished editing new feauture for users

--- a/public/locales/en/createNew.json
+++ b/public/locales/en/createNew.json
@@ -1,5 +1,6 @@
 {
-    "titlePage":"Create a new",
+    "titlePageCreate":"Create a new",
+    "titlePageEdit":"Edit your new",
     "mainTitle":"Write here your main title.",
     "title":"Title",
     "mainImage":"Upload here your main image.",
